--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
 body {
     background-color: #efefef;
+    padding-top: 4.5rem;
 }
 
 main {
-    margin-top: 2em;
+    margin-top: 1em;
+}
+
+.navbar-brand {
+    font-size: 26px;
 }
 
 .navbar-shadow {
