--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@ main {
     box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
 }
 
+.xy-shadow {
+    -webkit-box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.5);
+    -moz-box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.5);
+    box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.5);
+  }
+
 .card {
     border-radius: 0;
 }
@@ -47,4 +53,18 @@ main {
   .example-leave.example-leave-active {
     opacity: 0.01;
     transition: opacity 300ms ease-in;
+  }
+
+
+.results-list {
+    overflow-y: scroll;
+    height: calc(100vh - 160px)
+  }
+
+  .jumbotron {
+    border-radius: 0;
+  }
+  
+  .form-control {
+    border-radius: 0;
   }
