--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,8 @@ main {
   .form-control {
     border-radius: 0;
   }
+
+  .track-list  {
+    overflow-y: scroll;
+    height: calc(100vh - 245px)
+  }
